fixing broken styles and templates, renaming "classic" to "parent" in post, as it was misleading

--- a/stylesheets/theme1_master/global.css
+++ b/stylesheets/theme1_master/global.css
@@ -441,6 +441,10 @@ table {
 	border-bottom-color: #ffb8be;
 }
 
+.post.parent.unapproved_post .post_author {
+	border-color: #ffb8be;
+}
+
 .post.unapproved_post .post_controls {
 	border-top-color: #ffb8be;
 }
@@ -1096,12 +1100,25 @@ div.error ul {
 	overflow: hidden;
 }
 
+.post.parent {
+	padding-top: 15px;
+}
+
 .post .post_author {
 	border-bottom: 1px solid #ccc;
 	border-top: 2px solid #ccc;
 	background: #f5f5f5;
 	padding: 5px;
 	overflow: hidden;
+}
+
+.post.parent .post_author {
+	border: 1px solid #ddd;
+	float: left;
+	width: 15%;
+	margin: 0 1% 15px 0;
+	border-left: 0;
+	padding: 5px 1%;
 }
 
 .post .post_author .buddy_status {
@@ -1112,6 +1129,12 @@ div.error ul {
 .post .post_author div.author_avatar {
 	float: left;
 	margin-right: 3px;
+}
+
+.post.parent .post_author div.author_avatar {
+	float: none;
+	text-align: center;
+	margin-bottom: 8px;
 }
 
 .post .post_author div.author_avatar img {
@@ -1125,12 +1148,25 @@ div.error ul {
 	padding: 6px 8px;
 }
 
+.post.parent .post_author div.author_information {
+	float: none;
+	padding: 0;
+	text-align: center;
+}
+
 .post .post_author div.author_statistics {
 	float: right;
 	font-size: 11px;
 	padding: 3px 10px 3px 5px;
 	color: #666;
 	line-height: 1.3;
+}
+
+.post.parent .post_author div.author_statistics {
+	border-top: 1px dotted #ccc;
+	margin: 6px 0 0 0;
+	padding: 6px 6px 3px 6px;
+	float: none;
 }
 
 .post .post_head {
@@ -1156,6 +1192,12 @@ div.error ul {
 .post_body {
 	font-size: 14px;
 	padding: 12px 0;
+}
+
+.post.parent .post_content {
+	float: left;
+	width: 79%;
+	padding: 0 1% 5px 1%;
 }
 
 .post_content {
